--- a/index.html
+++ b/index.html
@@ -16,8 +16,9 @@
             <nav>
                 <ul>
                     <li><a class="active" href="index.html">Home</a></li>
-                    <li><a href="overmij.html">O ver mij</a></li>
-                    <li><a href="info.html">Informatie</a></li>
+                    <li><a href="auto's.html">auto's</a></li>
+                    <li><a href="decals.html">decals</a></li>
+                    <li><a href="playlists.html">playlists</a></li>
                 </ul>
             </nav>
             
