--- a/auto's.html
+++ b/auto's.html
@@ -18,8 +18,9 @@
             <nav>
                 <ul>
                     <li><a href="index.html">Home</a></li>
-                    <li><a class="active" href="overmij.html">Over mij</a></li>
+                    <li><a class="active" href="overmij.html">auto's</a></li>
                     <li><a href="info.html">Informatie</a></li>
+                    <li><a href="info.html">playlists</a></li>
                 </ul>
             </nav>
             
