--- a/playlists.html
+++ b/playlists.html
@@ -18,8 +18,8 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a href="auto's.html">auto's</a></li>
-                    <li><a class="decals" href="info.html">decals</a></li>
-                    <li><a href="playlists.html">poep</a></li>
+                    <li><a href="info.html">decals</a></li>
+                    <li><a class="active" href="playlists.html">playlists</a></li>
                 </ul>
             </nav>
             
