--- a/auto's.html
+++ b/auto's.html
@@ -19,8 +19,9 @@
                 <ul>
                     <li><a href="index.html">Home</a></li>
                     <li><a class="active" href="overmij.html">auto's</a></li>
-                    <li><a href="info.html">Informatie</a></li>
-                    <li><a href="info.html">playlists</a></li>
+                    <li><a href="decals.html">decals</a></li>
+                    <li><a href="playlists.html">playlists</a></li>
+                    <li><a href="ranks.html">ranks</a></li>
                 </ul>
             </nav>
             
