--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
     <body>
         <main>
             <header>
-                <h1 id="hoofdtitel" class="belangrijk">De beste site van Nederland</h1>
+                <h1 id="hoofdtitel" class="belangrijk">rocket league</h1>
             </header>
             
             <nav>
@@ -19,6 +19,7 @@
                     <li><a href="auto's.html">auto's</a></li>
                     <li><a href="decals.html">decals</a></li>
                     <li><a href="playlists.html">playlists</a></li>
+                    <li><a href="ranks.html">ranks</a></li>
                 </ul>
             </nav>
             
