--- a/info.html
+++ b/info.html
@@ -20,6 +20,7 @@
                     <li><a href="auto's.html">auto's</a></li>
                     <li><a class="decals" href="info.html">decals</a></li>
                     <li><a href="playlists.html">poep</a></li>
+                    <li><a href="ranks.html">ranks</a></li>
                 </ul>
             </nav>
             
