--- a/decals.html
+++ b/decals.html
@@ -10,15 +10,15 @@
     <body>
         <main>
             <header>
-                <h1>Informatie overal!</h1>
+                <h1>decals</h1>
                 <br>
             </header>
             
             <nav>
                 <ul>
-                    <li><a class="decals" href="index.html">Home</a></li>
+                    <li><a href="index.html">Home</a></li>
                     <li><a href="auto's.html">auto's</a></li>
-                    <li><a class="decals" href="info.html">decals</a></li>
+                    <li><a class="active" href="info.html">decals</a></li>
                     <li><a href="playlists.html">playlists</a></li>
                     <li><a href="ranks.html">ranks</a></li>
                 </ul>
