--- a/auto's.html
+++ b/auto's.html
@@ -4,14 +4,14 @@
 
     <head>
         <link rel="stylesheet" href="style.css" />
-        <title>Informatie over mij</title>
+        <title>Dit is een eenvoudige website</title>
         <meta charset="utf-8" />
     </head>
     
     <body>
         <main>
             <header>
-                <h1>Wil je meer van mij weten?</h1>
+                <h1>auto's</h1>
                 <br>
             </header>
             
