--- a/index.html
+++ b/index.html
@@ -37,7 +37,7 @@
                 </p>
               </article>
         <article>
-                <img class="box3links" src="afbeeldingen/rlscherm.jpg">
+                <img class="box3links" src="afbeeldingen/eigenaar.jpeg">
                 <p class="box3rechts">
                 test5 <a href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> test6
                 </p>
