site is bijna klaar

--- a/index.html
+++ b/index.html
@@ -24,28 +24,27 @@
             </nav>
             
             <article>
-                <img class="kolomlinks" src="afbeeldingen/rlscherm.jpg">
-                <p class="kolomrechts">
-                test1 <a href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> test2
+                <img class="kolomrechts" src="afbeeldingen/rlscherm.jpg">
+                <p class="kolomlinks">
+                Rocket League is een game waarin je met auto's gaat voetballen. Het doel is dan ook om de bal in de tegenstander z'n net te krijgen. Elke keer als je dit lukt krijgt jouw team een punt. Wie aan het eind van de game de meeste punten heeft wint. Elke game duurt 5 minuten en als het gelijk staat gaat het door totdat dit nietmeer het geval is. Ook heeft Rocket League een eigen site.<a href="https://www.rocketleague.com/">klik hier</a> 
                 </p>
               </article>
 
                 <article>
-                <img class="box2rechts" src="afbeeldingen/sideswipe.jpeg">
-                <p class="box2links">
-                test3 <a href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> test4
-                </p>
+                <img class="box2links" src="afbeeldingen/sideswipe.jpeg">
+                <p class="box2rechts">
+                Dit spel kan op verschillende platvormen gespeeld worden. De meest gebruikten zijn Playstation, pc en Xbox. je kunt het ook op je mobiel, ipad en switch spelen. Als je het op je mobiel download heet het Rocket League Sideswipe in plaats van Rocket League.
               </article>
         <article>
-                <img class="box3links" src="afbeeldingen/eigenaar.jpeg">
-                <p class="box3rechts">
-                test5 <a href="http://www.encyclo.nl/begrip/dum%20vivimus%20vivamus">Vivamus</a> test6
+                <img class="box3rechts" src="afbeeldingen/eigenaar.jpeg">
+                <p class="box3links">
+                De maker van Rocket League is Psyonix maar in het jaar 2020 heeft Epic Games het gekocht. De komst van epic games heeft veel verandert aan de game. Zo zijn er meer updates om de game beter te maken en zijn er verschillende items verandert en toegevoegd.
                 </p>
               </article>
             <footer>
                 <hr/>
-                <p>info@emmauscollege.nl</p>
-                <p class="smalltext">copyright A.P. Cammeraat 2016</p>
+                <p>112665@emmauscollege.nl</p>
+                <p class="smalltext">door: Lars van den Bos</p>
             </footer>
         
         </main>
